--- a/index.html
+++ b/index.html
@@ -18,7 +18,30 @@
     <div id="leftmenu"></div>
     <div id="notifmenu" class="rightmenu"></div>
     <div id="accountmenu" class="rightmenu"></div>
+    <div id="content">
+        <div id="leftcolumn">
+            <div class="cal_picker_row">
+                <div id="cal_picker_dow">Monday</div>
+                <div id="cal_picker_mnth">September</div>
+                <div id="cal_picker_day">20</div>
+                <div id="cal_picker_year">2017</div>
+            </div>
+            <div class="cal_picker_row">
+                <div id="cal_picker_my_rot">
+                    <div class="button material-icons" id="cal_rot_back">arrow_back</div>
+                    <div id="cal_picker_rot_disp">September 2017</div>
+                    <div class="button material-icons" id="cal_rot_frwd">arrow_forward</div>
+                </div>
+                <table id="cal_picker_grid">
+                    <tr>
+                        <th>Su</th><th>Mo</th><th>Tu</th><th>We</th><th>Th</th><th>Fr</th><th>Sa</th>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
     <script src="lib-verbose.js"></script>
+    <script src="calendar.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
