Initial Gantt Chart code

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,7 +39,13 @@
                 </table>
             </div>
         </div>
-    </div>
+		<div id="rightcolumn">
+			<div id="gantt_container">
+				<div id="gantt_controls"></div>
+				<div id="gantt_content"></div>
+			</div>
+		</div>
+	</div>
     <script src="lib-verbose.js"></script>
     <script src="calendar.js"></script>
     <script src="index.js"></script>
