Added notification styling and framework code

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <link rel="stylesheet" href="index.css"/>
+    <link rel="stylesheet" href="chalk-notif.css"/>
 </head>
 <body>
     <div id="topmenu">
@@ -16,7 +17,21 @@
         <div id="search"><input type="text"/></div>
     </div>
     <div id="leftmenu"></div>
-    <div id="notifmenu" class="rightmenu"></div>
+    <div id="notifmenu" class="rightmenu">
+        <!--<div class="chalk-notif-item">
+            <div class="chalk-notif-serv">
+                <div class="chalk-notif-serv-ico"></div>
+                <div class="chalk-notif-serv-text">Service Notification</div>
+            </div>
+            <div class="chalk-notif-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eros sapien, vulputate eget sem non, condimentum pharetra odio. Nulla lobortis.
+            </div>
+            <div class="chalk-notif-actions">
+                <div class="chalk-notif-action-button material-icons">check</div>
+                <div class="chalk-notif-action-button material-icons">close</div>
+            </div>
+        </div>-->
+    </div>
     <div id="accountmenu" class="rightmenu"></div>
     <div id="content">
         <div id="leftcolumn">
@@ -48,6 +63,7 @@
 	</div>
     <script src="lib-verbose.js"></script>
     <script src="calendar.js"></script>
+    <script src="chalk-notif.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
