Javascript fixes for new datepicker

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -61,8 +61,8 @@
                     </div>
                     <div id="dp_pick">
                         <div id="dp_pick_top">
-                            <div class="button mi" style="float:left">chevron_left</div>
-                            <div class="button mi" style="float:right">chevron_right</div>
+                            <div id="dp_pick_dec" class="button mi" style="float:left">chevron_left</div>
+                            <div id="dp_pick_inc" class="button mi" style="float:right">chevron_right</div>
                             <div class="text">October 2017</div>
                         </div>
                         <table>
@@ -75,7 +75,7 @@
                             <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
                         </table>
                         <div id="dp_pick_bottom">
-                            <div class="button">today</div>
+                            <div id="dp_pick_today" class="button">today</div>
                         </div>
                     </div>
                 </div>
