Added Gantt UI Initial Elements

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -82,8 +82,34 @@
         </div>
 		<div id="rightcolumn">
 			<div id="gantt_container">
-				<div id="gantt_controls"></div>
-				<div id="gantt_content"></div>
+				<div id="gantt_titles">
+                    <div class="gantt_title">
+                        <b>Thu,</b></br>Oct 12
+                    </div>
+                    <div class="gantt_title">
+                        <b>Fri,</b></br>Oct 13
+                    </div>
+                    <div class="gantt_title">
+                        <b>Sat,</b></br>Oct 14
+                    </div>
+                    <div class="gantt_title">
+                        <b>Sun,</b></br>Oct 15
+                    </div>
+                    <div class="gantt_title">
+                        <b>Mon,</b></br>Oct 16
+                    </div>
+                    <div class="gantt_title">
+                        <b>Tue,</b></br>Oct 17
+                    </div>
+                </div>
+				<div id="gantt_content">
+                    <div class="gantt_column"></div>
+                    <div class="gantt_column"></div>
+                    <div class="gantt_column"></div>
+                    <div class="gantt_column"></div>
+                    <div class="gantt_column"></div>
+                    <div class="gantt_column"></div>
+                </div>
 			</div>
 		</div>
 	</div>
