Proliminary additional schedule view code

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -79,16 +79,16 @@
                     </div>
                 </div>
             </div>
-            <div id="gantt_controls">
+            <div id="schedule_controls">
                 <div class="button">view_week</div>
                 <div class="button">view_agenda</div>
                 <div id="gc_gantt" class="button sel">short_text</div>
             </div>
         </div>
 		<div id="rightcolumn">
-			<div id="gantt_container">
-				<div id="gantt_titles">
-                    <div class="gantt_title">
+			<div id="schedule_container">
+				<div id="schedule_titles">
+                    <!--<div class="gantt_title">
                         <b>Thu,</b></br>Oct 12
                     </div>
                     <div class="gantt_title">
@@ -105,15 +105,29 @@
                     </div>
                     <div class="gantt_title">
                         <b>Tue,</b></br>Oct 17
-                    </div>
+                    </div>-->
+					<div class="daygrid_title">Sunday</div>
+					<div class="daygrid_title">Monday</div>
+					<div class="daygrid_title">Tuesday</div>
+					<div class="daygrid_title">Wednesday</div>
+					<div class="daygrid_title">Thursday</div>
+					<div class="daygrid_title">Friday</div>
+					<div class="daygrid_title">Saturday</div>
                 </div>
-				<div id="gantt_content">
+				<div id="schedule_content">
+                    <!--<div class="gantt_column"></div>
                     <div class="gantt_column"></div>
                     <div class="gantt_column"></div>
                     <div class="gantt_column"></div>
                     <div class="gantt_column"></div>
-                    <div class="gantt_column"></div>
-                    <div class="gantt_column"></div>
+                    <div class="gantt_column"></div>-->
+					
+					<div class="daygrid_column"></div>
+                    <div class="daygrid_column"></div>
+                    <div class="daygrid_column"></div>
+                    <div class="daygrid_column"></div>
+                    <div class="daygrid_column"></div>
+                    <div class="daygrid_column"></div>
                 </div>
 			</div>
 		</div>
