--- a/frontend/index.html
+++ b/frontend/index.html
@@ -132,7 +132,7 @@
 			</div>
 		</div>
 	</div>
-    <script src="lib-verbose.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/jcopi/selector@v1.0/lib-min.js"></script>
     <script src="calendar.js"></script>
     <script src="chalk-notif.js"></script>
     <script src="index.js"></script>
