Fixed bugs in IE

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,24 +36,6 @@
     <div id="accountmenu" class="rightmenu"></div>
     <div id="content">
         <div id="leftcolumn">
-            <!-- <div class="cal_picker_row">
-                <div id="cal_picker_dow">Monday</div>
-                <div id="cal_picker_mnth">September</div>
-                <div id="cal_picker_day">20</div>
-                <div id="cal_picker_year">2017</div>
-            </div>
-            <div class="cal_picker_row">
-                <div id="cal_picker_my_rot">
-                    <div class="button material-icons" id="cal_rot_back">arrow_back</div>
-                    <div id="cal_picker_rot_disp">September 2017</div>
-                    <div class="button material-icons" id="cal_rot_frwd">arrow_forward</div>
-                </div>
-                <table id="cal_picker_grid">
-                    <tr>
-                        <th>Su</th><th>Mo</th><th>Tu</th><th>We</th><th>Th</th><th>Fr</th><th>Sa</th>
-                    </tr>
-                </table>
-            </div> -->
             <div id="date_picker">
                 <div id="dp_disp">
                     <div id="dp_disp_top">2017</div>
@@ -61,8 +43,8 @@
                 </div>
                 <div id="dp_pick">
                     <div id="dp_pick_top">
-                        <div id="dp_pick_dec" class="button mi" style="float:left">chevron_left</div>
-                        <div id="dp_pick_inc" class="button mi" style="float:right">chevron_right</div>
+                        <div id="dp_pick_dec" class="button material-icons" style="float:left">chevron_left</div>
+                        <div id="dp_pick_inc" class="button material-icons" style="float:right">chevron_right</div>
                         <div class="text">October 2017</div>
                     </div>
                     <table>
@@ -80,9 +62,9 @@
                 </div>
             </div>
             <div id="schedule_controls">
-                <div class="button">view_week</div>
-                <div class="button">view_agenda</div>
-                <div id="gc_gantt" class="button sel">short_text</div>
+                <div class="button material-icons">view_week</div>
+                <div class="button material-icons">view_agenda</div>
+                <div id="gc_gantt" class="button material-icons sel">short_text</div>
             </div>
         </div>
 		<div id="rightcolumn">
