--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto"/>
-    <link rel="stylesheet" href="index_blue.css"/>
+    <link rel="stylesheet" href="index.css"/>
     <link rel="stylesheet" href="chalk-notif.css"/>
 </head>
 <body>
@@ -103,7 +103,7 @@
                     <div class="gantt_column"></div>
                     <div class="gantt_column"></div>
                     <div class="gantt_column"></div>-->
-					
+
 					<div class="daygrid_column"></div>
                     <div class="daygrid_column"></div>
                     <div class="daygrid_column"></div>
