--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto"/>
-    <link rel="stylesheet" href="index.css"/>
-    <link rel="stylesheet" href="chalk-notif.css"/>
+    <link rel="stylesheet" href="css/index.css"/>
+    <link rel="stylesheet" href="css/chalk-notif.css"/>
 </head>
 <body>
     <div id="topmenu">
@@ -115,8 +115,8 @@
 		</div>
 	</div>
     <script src="https://cdn.jsdelivr.net/gh/jcopi/selector@v1.0/lib-min.js"></script>
-    <script src="calendar.js"></script>
-    <script src="chalk-notif.js"></script>
-    <script src="index.js"></script>
+    <script src="lib/calendar.js"></script>
+    <script src="lib/chalk-notif.js"></script>
+    <script src="lib/index.js"></script>
 </body>
 </html>
