--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,9 +1,14 @@
 <!doctype html>
 <html>
-<head>
-    
-</head>
+    <head>
+        <title>Chalk | Login</title>
+        <meta charset="utf-8"/>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto"/>
+        <link rel="stylesheet" href="css/login.css"/>
+    </head>
 <body>
-
+    <div id="top_bar"></div>
+    <div id="login_modal"></div>
 </body>
 </html>
